<resources>
    <string name="app_name">Cecimpedan</string>

    <!-- Bawaan -->
    <string name="todo">TODO</string>

    <!-- Navigation Bottom -->
    <string name="navigationbottom_permainan">Permainan</string>
    <string name="navigationbottom_dashboard">Dashboard</string>
    <string name="navigationbottom_kamus">Kamus</string>

    <!-- Action Bar -->
    <string name="actionbar_pengaturan">Pengaturan</string>

    <!-- Layout Bermain -->
    <string name="bermain_tahukah_anda">Tahukah Anda</string>
    <string name="bermain_cara_bermain">Cara Bermain</string>

    <!-- Layout Hasil -->
    <string name="hasil_hasil_permainan">Hasil Permainan</string>

    <!-- Layout Permainan -->
    <string name="permainan_cek_jawaban">Cek Jawaban</string>
    <string name="permainan_acak">Acak</string>
    <string name="permainan_bersihkan">Bersihkan</string>

    <!-- Layout Tentang -->
    <string name="title_pengmb">Dewa Putu Yudhi Ardiana, S.Kom., M.Pd.</string>
    <string name="title_email_pengmbg">loremipsum@rocks.com</string>
    <string name="title_pengembang">Pengembang</string>
    <string name="title_email">Email</string>
    <string name="title_ttng_pengembang">Tentang Pengembang</string>
    <string name="title_copyright">STIKI Indonesia 2019</string>
    <string name="title_terima_kasih_kepada">Terima Kasih Kepada</string>
    <string name="title_isi_terimakasih">STIKI Indonesia</string>
    <string name="title_isitentang">Aplikasi ini merupakan, aplikasi untuk mengasah kemampuan dalam menyusun huruf</string>

    <!-- Tombol Modal -->
    <string name="tombol_modal_lanjut">Lanjut</string>
    <string name="tombol_modal_ulang">Ulang</string>
    <string name="tombol_modal_baik">Baik</string>

    <!-- Modal Permainan -->
    <string name="modal_jawaban_selesai">Selesai</string>
    <string name="modal_jawaban_kosong">Kosong.?</string>
    <string name="modal_jawaban_waktuhabis">Waktu Habis</string>
    <string name="modal_jawaban_benar_deskripsi">Jawaban Benar Lanjut Ke Soal Berikut.</string>
    <string name="modal_jawaban_salah_deskripsi">Wah.. Sepertinya Jawaban Kamu Salah, Ulangi?</string>
    <string name="modal_jawaban_waktuhabis_deskripsi">Wah.. Sepertinya Waktu Untuk Menjawab Habis, Lanjut Ke Soal Berikut</string>
    <string name="modal_jawaban_kosong_deskripsi">Sepertinya Kamu Belum Memasukan Jawaban, Masukan Jawaban Kamu Ya!</string>
    <string name="modal_jawaban_selesai_deskripsi">"Wah.. Sepertinya Kamu Sudah Menjawab Semua Pertanyaan"</string>

    <!-- Modal Hasil Permainan -->
    <string name="item_hasil_jawaban">Jawaban :</string>
    <string name="item_hasil_jawaban_kamu">Jawaban Kamu :</string>
    <string name="modal_jawaban_salah">Jawaban Salah</string>
    <string name="modal_jawaban_benar">Jawaban Benar</string>
    <string name="modal_skor">Skor</string>

    <!-- Modal Hasil Permainan Status -->
    <string name="modal_status_gagal">Coba Lagi Ya</string>
    <string name="modal_status_nilai_rendah">Lumayan</string>
    <string name="modal_status_nilai_menengah">Bagus</string>
    <string name="modal_status_nilai_tinggi">Luar Biasa</string>

    <!-- Layout Tentang Deskripsi -->
    <string name="layout_tentang_deskripsi">Deskripsi</string>

    <!--Layout Login -->
    <string name="layout_login_login">Login</string>
    <string name="layout_login_keluar">Keluar</string>
    <string name="layout_login_deskripsi">Belajar Cecimpedan Mudah Dan Mengasyikan.</string>

    <!-- Layout Profile Pada Dashboard -->
    <string name="dashboard_statistik">Statistik</string>
    <string name="dashboard_daftar_nilai">Daftar Nilai</string>

    <!-- Kamus Pencarian Tidak Ada -->
    <string name="pencarianerror_pencarian_tidak_ditemukan">Pencarian Tidak Ditemukan</string>
    <string name="pencarianerror_pesan">Maaf Kata Kunci Pencarian Yang Anda Masukan Tidak Kami Temukan, Coba Melakukan Pencarian Dengan Kata Kunci Lain</string>

    <!-- Kamus Tab -->
    <string name="kamus_alit">Alit-Alit</string>
    <string name="kamus_biasa">Biasa</string>

    <!-- Modal Pause -->
    <string name="modal_pause_kembali">Kembali</string>
    <string name="modal_pause_permainan_terhenti">Permainan Terhenti</string>
    <string name="modal_pause_pesan">Apakah anda ingin melanjutkan bermain.?</string>

    <!-- Intro Deskripsi -->
    <string name="label_1">Om Swastyastu</string>
    <string name="desc_1">Selamat datang di aplikasi Cecimpedan disini kamu bisa bermain dan belajar.</string>
    <string name="label_2">Susun Hurufnya</string>
    <string name="desc_2">Permainan yang sederhana untuk meningkatkan kemampuan kamu dalam cecimpedan.</string>
    <string name="label_3">Bantu Kami Dalam Mengmebangkan</string>
    <string name="desc_3">entahlah mau dikasi apa</string>

    <!-- Bottom Sheet Level -->
    <string name="bottomsheet_level_total_soal_permainan">Total Soal Permainan : %1$s</string>


</resources>
