<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_terhenti" />

    <TextView
        android:id="@+id/msterhenti_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/modal_pause_permainan_terhenti"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/msterhenti_deskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/modal_pause_pesan"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <Button
        android:id="@+id/btn_lanjut_msterhenti"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/drw_tombol_bulat"
        android:text="@string/tombol_modal_lanjut"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_kembali_msterhenti"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@drawable/drw_tombol_bulat"
        android:backgroundTint="@color/warnaPutih"
        android:text="@string/modal_pause_kembali"
        android:textColor="@color/colorAccent" />

</LinearLayout>