<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/tentang_background"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tentang_image"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        app:layout_constraintBottom_toTopOf="@+id/tentang_background"
        app:layout_constraintEnd_toEndOf="@id/tentang_background"
        app:layout_constraintStart_toStartOf="@id/tentang_background"
        app:layout_constraintTop_toBottomOf="@id/tentang_background"
        app:srcCompat="@drawable/img_banner"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/teks_copyright"
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:gravity="center"
        android:text="@string/title_copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tentang_image" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teks_copyright">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <ImageView
                    android:layout_width="94dp"
                    android:layout_height="64dp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitEnd"
                    android:src="@drawable/img_blob" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="3dp"
                    app:srcCompat="@drawable/ic_deskripsi"
                    android:contentDescription="@string/todo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/layout_tentang_deskripsi"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="50dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/title_isitentang" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <ImageView
                    android:layout_width="94dp"
                    android:layout_height="64dp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitEnd"
                    android:src="@drawable/img_blob" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="3dp"
                    android:tint="@color/warnaPutih"
                    app:srcCompat="@drawable/ic_tentang_icon_pengembang"
                    android:contentDescription="@string/todo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/title_ttng_pengembang"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="95dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="start"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:tint="@color/colorAccent"
                            app:srcCompat="@drawable/ic_tentang_icon_pengembang"
                            android:contentDescription="@string/todo" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_marginEnd="10dp"
                                android:text="@string/title_pengembang"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:text="@string/title_pengmb" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="38dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="start"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="0"
                            android:tint="@color/colorAccent"
                            app:srcCompat="@drawable/ic_email"
                            android:contentDescription="@string/todo" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:text="@string/title_email"
                                android:textColor="@color/colorAccent"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:text="@string/title_email_pengmbg" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <ImageView
                    android:layout_width="94dp"
                    android:layout_height="64dp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/todo"
                    android:scaleType="fitEnd"
                    android:src="@drawable/img_blob" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="3dp"
                    app:srcCompat="@drawable/ic_deskripsi"
                    android:contentDescription="@string/todo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/title_terima_kasih_kepada"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="50dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/title_isi_terimakasih" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>