<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/gambar_logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_banner"
        android:contentDescription="@string/todo" />

    <RelativeLayout
        android:id="@+id/tombol_mulai"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gambar_logo">

        <ImageView
            android:id="@+id/tombol_mulai_permainan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/drw_bulat_menu_kuis"
            android:elevation="1dp"
            android:contentDescription="@string/todo"/>

        <ImageView
            android:id="@+id/materi_ikon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerInParent="true"
            android:elevation="1dp"
            android:tint="@android:color/white"
            app:srcCompat="@drawable/ic_bermain"
            android:contentDescription="@string/todo"/>
    </RelativeLayout>

    <Button
        android:id="@+id/tombol_cara_permainan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@drawable/drw_tombol_bulat"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/bermain_cara_bermain"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:tint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tombol_mulai" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="94dp"
            android:layout_height="64dp"
            android:layout_gravity="end"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/img_blob"
            android:contentDescription="@string/todo"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="3dp"
            android:tint="@android:color/white"
            app:srcCompat="@drawable/ic_tahukan"
            android:contentDescription="@string/todo"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="3dp"
                android:text="@string/bermain_tahukah_anda"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/teks_tahukah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="7dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>